[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scenes/SupportScenes/UI/Classes/Classes.gd" type="Script" id=1]
[ext_resource path="res://Resources/Roboto.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/characters/characters_8x8.png" type="Texture" id=4]
[ext_resource path="res://Assets/items/items_8x8.png" type="Texture" id=5]
[ext_resource path="res://Resources/main_theme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/ui/square_background.png" type="Texture" id=7]
[ext_resource path="res://Resources/Renderer.tres" type="Material" id=8]
[ext_resource path="res://Scenes/SupportScenes/UI/Classes/ClassButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/SupportScenes/PlayerCharacter/ColorGear.gd" type="Script" id=10]
[ext_resource path="res://Assets/ui/black_gradient.png" type="Texture" id=11]
[ext_resource path="res://Scenes/SupportScenes/UI/Classes/ClassEvolutionButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/SupportScenes/UI/Classes/CharacterPreview.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=4]
resource_name = "Open"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/TreeRoot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ClassInfo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/TreeRoot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ClassInfo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="DynamicFont" id=6]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 210, 10, 10 )

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 128, 128 )
modulate_color = Color( 1, 1, 1, 0.313726 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 200, 9, 9 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 20, 200, 10, 10 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 50, 200, 10, 10 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 10, 200, 9, 9 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 40, 200, 10, 10 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 30, 200, 10, 10 )

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 1, 130.5, 9, 9 )

[sub_resource type="DynamicFont" id=21]
size = 37
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Classes" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Open"
anims/Open = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.54902 )
anchor_bottom = 1.0
margin_right = 256.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.54902 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
texture = ExtResource( 11 )
expand = true
flip_h = true

[node name="ClassesBackground" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.568627 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -99.0
margin_top = -120.0
margin_right = 101.0
margin_bottom = 120.0
rect_min_size = Vector2( 400, 180 )
texture_normal = ExtResource( 7 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
custom_constants/margin_top = 16
custom_constants/margin_bottom = 16

[node name="TreeRoot" type="VBoxContainer" parent="MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 16.0
margin_right = 100.0
margin_bottom = 344.0
rect_min_size = Vector2( 100, 0 )
custom_constants/separation = 16

[node name="ClassButton4" parent="MarginContainer/TreeRoot" instance=ExtResource( 9 )]
margin_right = 100.0

[node name="ClassEvolutionButton" parent="MarginContainer/TreeRoot" instance=ExtResource( 12 )]
margin_top = 56.0
margin_right = 100.0
margin_bottom = 96.0

[node name="ExitButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="Title" type="Label" parent="ExitButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -9.0
margin_top = -1.0
margin_right = 7.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "x"
align = 1
valign = 1

[node name="ClassInfo" type="PanelContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -156.5
margin_right = 124.0
margin_bottom = 156.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 6 )
custom_styles/panel = SubResource( 19 )

[node name="MarginContainer" type="MarginContainer" parent="ClassInfo"]
margin_right = 266.0
margin_bottom = 318.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ResizeContainer" type="VBoxContainer" parent="ClassInfo/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 258.0
margin_bottom = 310.0
rect_min_size = Vector2( 250, 0 )
alignment = 1

[node name="ClassName" type="HBoxContainer" parent="ClassInfo/MarginContainer/ResizeContainer"]
margin_right = 250.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Class" type="Label" parent="ClassInfo/MarginContainer/ResizeContainer/ClassName"]
margin_left = 24.0
margin_top = 7.0
margin_right = 172.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0.14902, 0.737255, 0.180392, 1 )
custom_fonts/font = SubResource( 6 )
text = "Apprentice"
align = 1

[node name="TextureRect" type="TextureRect" parent="ClassInfo/MarginContainer/ResizeContainer/ClassName"]
material = ExtResource( 8 )
margin_left = 176.0
margin_right = 226.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource( 7 )
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="ClassInfo/MarginContainer/ResizeContainer"]
material = ExtResource( 8 )
margin_left = 25.0
margin_top = 54.0
margin_right = 225.0
margin_bottom = 154.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 4
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
expand = true
stretch_mode = 5

[node name="Character" type="Sprite" parent="ClassInfo/MarginContainer/ResizeContainer/TextureRect"]
material = ExtResource( 8 )
position = Vector2( 100.5, 50 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
hframes = 4
vframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 80, 40 )
script = ExtResource( 10 )

[node name="Description" type="Label" parent="ClassInfo/MarginContainer/ResizeContainer"]
margin_top = 158.0
margin_right = 250.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 70 )
custom_fonts/font = SubResource( 10 )
text = "Swift and precise, the Nomad's arrows strike fear into distant foes."
align = 1
autowrap = true

[node name="Multipliers" type="Label" parent="ClassInfo/MarginContainer/ResizeContainer"]
margin_top = 232.0
margin_right = 250.0
margin_bottom = 269.0
custom_colors/font_color = Color( 0.741176, 0.741176, 0.741176, 1 )
custom_fonts/font = SubResource( 13 )
text = "+20% Sword Damage
+20% Armor/Helmet Stats"
align = 1

[node name="Strengths" type="HBoxContainer" parent="ClassInfo/MarginContainer/ResizeContainer"]
margin_top = 273.0
margin_right = 250.0
margin_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths"]
margin_left = 38.0
margin_top = 5.0
margin_right = 113.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 10 )
text = "Strengths:"
align = 1

[node name="Health" type="PanelContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths"]
margin_left = 117.0
margin_right = 146.0
margin_bottom = 29.0
size_flags_vertical = 4
custom_styles/panel = SubResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Health"]
margin_right = 29.0
margin_bottom = 29.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Health/MarginContainer"]
material = ExtResource( 8 )
margin_left = 2.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 25, 25 )
size_flags_vertical = 3
texture = SubResource( 12 )
expand = true
stretch_mode = 5

[node name="Defense" type="PanelContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths"]
margin_left = 150.0
margin_right = 179.0
margin_bottom = 29.0
size_flags_vertical = 4
custom_styles/panel = SubResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Defense"]
margin_right = 29.0
margin_bottom = 29.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Defense/MarginContainer"]
material = ExtResource( 8 )
margin_left = 2.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 25, 25 )
size_flags_vertical = 3
texture = SubResource( 15 )
expand = true
stretch_mode = 5

[node name="Vitality" type="PanelContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths"]
margin_left = 183.0
margin_right = 212.0
margin_bottom = 29.0
size_flags_vertical = 4
custom_styles/panel = SubResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Vitality"]
margin_right = 29.0
margin_bottom = 29.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Vitality/MarginContainer"]
material = ExtResource( 8 )
margin_left = 2.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 25, 25 )
size_flags_vertical = 3
texture = SubResource( 18 )
expand = true
stretch_mode = 5

[node name="Attack" type="PanelContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths"]
visible = false
margin_left = 199.0
margin_right = 228.0
margin_bottom = 29.0
size_flags_vertical = 4
custom_styles/panel = SubResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Attack"]
margin_right = 29.0
margin_bottom = 29.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Attack/MarginContainer"]
material = ExtResource( 8 )
margin_left = 2.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 25, 25 )
size_flags_vertical = 3
texture = SubResource( 14 )
expand = true
stretch_mode = 5

[node name="Dexterity" type="PanelContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths"]
visible = false
margin_left = 216.0
margin_right = 245.0
margin_bottom = 29.0
size_flags_vertical = 4
custom_styles/panel = SubResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Dexterity"]
margin_right = 29.0
margin_bottom = 29.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Dexterity/MarginContainer"]
material = ExtResource( 8 )
margin_left = 2.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 25, 25 )
size_flags_vertical = 3
texture = SubResource( 17 )
expand = true
stretch_mode = 5

[node name="Speed" type="PanelContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths"]
visible = false
margin_left = 244.0
margin_right = 273.0
margin_bottom = 29.0
size_flags_vertical = 4
custom_styles/panel = SubResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Speed"]
margin_right = 29.0
margin_bottom = 29.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="ClassInfo/MarginContainer/ResizeContainer/Strengths/Speed/MarginContainer"]
material = ExtResource( 8 )
margin_left = 2.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 25, 25 )
size_flags_vertical = 3
texture = SubResource( 16 )
expand = true
stretch_mode = 5

[node name="ClassEvolution" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -156.5
margin_right = 124.0
margin_bottom = 156.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 6 )
custom_styles/panel = SubResource( 19 )

[node name="MarginContainer" type="MarginContainer" parent="ClassEvolution"]
margin_right = 420.0
margin_bottom = 313.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="ClassEvolution/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 412.0
margin_bottom = 305.0
alignment = 1

[node name="CharacterPreview" parent="ClassEvolution/MarginContainer/HBoxContainer" instance=ExtResource( 13 )]
margin_bottom = 297.0
alignment = 2

[node name="CharacterPreview2" parent="ClassEvolution/MarginContainer/HBoxContainer" instance=ExtResource( 13 )]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 297.0
alignment = 2

[node name="NotEnoughStones" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -156.5
margin_right = 124.0
margin_bottom = 156.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 6 )
custom_styles/panel = SubResource( 19 )

[node name="MarginContainer" type="MarginContainer" parent="NotEnoughStones"]
margin_right = 248.0
margin_bottom = 313.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="NotEnoughStones/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 240.0
margin_bottom = 305.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NotEnoughStones/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 232.0
margin_bottom = 142.0
alignment = 1

[node name="AscensionStone" type="PanelContainer" parent="NotEnoughStones/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 59.0
margin_right = 113.0
margin_bottom = 54.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 20 )

[node name="MarginContainer" type="MarginContainer" parent="NotEnoughStones/MarginContainer/VBoxContainer/HBoxContainer/AscensionStone"]
margin_right = 54.0
margin_bottom = 54.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="NotEnoughStones/MarginContainer/VBoxContainer/HBoxContainer/AscensionStone/MarginContainer"]
material = ExtResource( 8 )
margin_left = 2.0
margin_top = 2.0
margin_right = 52.0
margin_bottom = 52.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 3
texture = SubResource( 22 )
expand = true
stretch_mode = 5

[node name="StoneCount" type="Label" parent="NotEnoughStones/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 117.0
margin_top = 4.0
margin_right = 173.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0.266667, 0.843137, 0.407843, 1 )
custom_fonts/font = SubResource( 21 )
text = "0/5"
align = 1

[node name="Label" type="Label" parent="NotEnoughStones/MarginContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 232.0
margin_bottom = 209.0
text = "You need to consume 5 more ascension stones to be able to unlock a new class."
align = 1
autowrap = true
